# internal/controller/networkflowdiscovery/chain/update_status.go
@@ -200,11 +200,7 @@ func flowEdgesToViews(edges []sreportalv1alpha1.FlowEdge) []domainnetpol.FlowEdg
 			From:     e.From,
 			To:       e.To,
 			EdgeType: e.EdgeType,
-		}
-
-		if e.LastSeen != nil {
-			t := e.LastSeen.Time
-			views[i].LastSeen = &t
+			Used:     e.Used,
 		}
 	}
 
